<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMDB</string>
    <string name="classifica">Classifica</string>
    <string name="spinnerprompt">Seleziona la giornata</string>
    <string name="prefs">Impostazioni</string>
    <string name="host">"Host Sito    "</string>
    <string name="Salva">Salva</string>
    <string name="squadre">Squadre</string>
    <string name="squadra">Squadra</string>
    <string name="allenatore">Allenatore: </string>
    <string name="crediti">"Crediti Residui: "</string>
    <string name="modificatore">Modificatore</string>
    <string name="totale">Totale</string>
    <string name="mail">E-mail: </string>
    <string name="colori">Colori Sociali: </string>
    <string name="risultati">Calendario</string>
    <string name="nonGiocata">NG</string>
    <string name="prossima">Prossimo Turno</string>
    <string name="clear">Svuota Db</string>
    <string name="aggiorna">Aggiorna Dati</string>
    <string name="welcome">"Benvenuto! Questa è la prima volta che avvii IMDB. Clicca sul bottone 'Aggiorna Dati' per configurarla"</string>
    <string name="inviaform">Invio Formazione</string>
    <string name="confirmMsg">"Sei sicuro di voler uscire dall'applicazione?"</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="esci">Esci</string>
    <string name="noconnection">Nessuna connessione attiva!</string>
    <string name="updateSuccessful">Dati aggiornati!</string>
    <string name="updating">Termino aggiornamento…</string>
    <string name="loading">Caricamento…</string>
    <string name="updatingSerieA">Aggiorno la Serie A</string>
    <string name="updatingCompetitions">Aggiorno le competizioni</string>
    <string name="updatingSquadre">Aggiorno le squadre</string>
    <string name="updatingTabellini">Aggiorno i tabellini</string>
    <string name="updatingGiornate">Aggiorno le giornate</string>
    <string name="updatingFoto">Aggiorno le immagini</string>
    <string name="updatingClassifica">Aggiorno la classifica</string>
    <string name="progrGiornata">Programma Giornata</string>
    <string name="resGiornata">"Giornata  "</string>
    <string name="cupGiornata">"Turno  "</string>
    <string name="notPlayed">Giornata non ancora disputata!!!</string>
    <string name="guestbook">Sala Stampa</string>
    <string name="schedina">Schedina</string>
    <string name="coppa">Coppa</string>
    <string name="campionato">Campionato</string>
    <string name="refresh">Aggiorna</string>
    <string name="back">Indietro</string>
    <string name="forward">Avanti</string>
    <string name="error">"ERRORE!!! "</string>
    <string name="checkhost">"Verifica l'host inserito: "</string>
    <string name="probabili">Probabili Formazioni</string>
    <string name="gazzetta">Gazzetta</string>
    <string name="fantagazzetta">Fantagazzetta</string>
    <string name="mediaset">Sport Mediaset</string>
    <string name="voti">Voti Ufficiosi</string>
    <string name="siteCategory">Impostazioni sito</string>
    <string name="probabiliCategory">URL Probabili formazioni</string>
    <string name="votiCategory">URL Voti e Assist</string>
    <string name="layoutCategory">Impostazioni Homepage</string>
    <string name="numSqSummary">Imposta il numero di squadre della tua lega</string>
    <string name="numSq">Numero Squadre</string>
    <string name="hostSummary">"Imposta l'url del tuo sito"</string>
    <string name="teamSummary">Imposta la tua squadra</string>
    <string name="guestSummary">Seleziona se il tuo sito contiene guestbook</string>
    <string name="coppaSummary">Seleziona se viene giocata la coppa</string>
    <string name="invioSummary">Imposta la pagina di invio formazione</string>
    <string name="gazzettaSummary">Imposta la url della Gazzetta</string>
    <string name="fantagazzettaSummary">Imposta la url di Fantagazzetta</string>
    <string name="mediasetSummary">Imposta la url di SportMediaset</string>
    <string name="votiSummary">Imposta la url dei voti ufficiosi</string>
    <string name="assistSummary">Imposta la url degli assist</string>
    <string name="liveSummary">Imposta la url dei voti live</string>
    <string name="probCheck">Seleziona per visualizzare il bottone delle probabili formazioni</string>
    <string name="votiCheck">Seleziona per visualizzare il bottone dei voti ufficiosi</string>
    <string name="languageSelect">Seleziona la lingua</string>
    <string name="language">Lingua</string>
    <string name="italian">Italiano</string>
    <string name="english">Inglese</string>
    <string name="notificationTitle">Scadenza invio formazione</string>
    <string name="notificationMsg">Scadenza ore</string>
    <string name="logo">Logo Squadra</string>
    <string name="firstMatchSum">Indica la prima giornata</string>
    <string name="lastMatchSum">"Indica l'ultima giornata"</string>
    <string name="firstMatch">Prima giornata</string>
    <string name="lastMatch">Ultima giornata</string>
    <string name="punti">Punti</string>
    <string name="vinte">V</string>
    <string name="pareggiate">N</string>
    <string name="perse">P</string>
    <string name="golfatti">GF</string>
    <string name="golsubiti">GS</string>
    <string name="totpunti">Totale</string>
    <string name="notificheSum">Seleziona se desidere ricevere notifiche per scadenze e risultati della tua squadra</string>
    <string name="notifiche">Notifiche</string>
    <string name="dbSummary">Impostazioni Database</string>
    <string name="roseSum">Seleziona per aggiornare le rose</string>
    <string name="rose">Rose</string>
    <string name="serieaSum">Seleziona per aggiornare i giocatori di Serie A</string>
    <string name="seriea">Serie A</string>
    <string name="tabSum">Seleziona per aggiornare i tabellini</string>
    <string name="tabellini">Tabellini</string>
    <string name="clearDbSummary">Seleziona per cancellare tutti i dati</string>
    <string name="clearDb">Cancella dati</string>
    <string name="clearConfirm">"Attenzione! Questo eliminerà TUTTI i dati della lega! Sei sicuro?"</string>
    <string name="settings_text">Per rendere effettive le modifiche devi aggiornare i dati</string>
    <string name="calType">"Quale calendario vuoi aprire?"</string>
    <string name="statType">"Quale statistica vuoi aprire?"</string>
    <string name="seavessi">Se avessi avuto</string>
    <string name="stats">Statistiche</string>
    <string name="assist">Rubrica Assist</string>
    <string name="live">Voti Live</string>
    

</resources>